RESOLVED FIXED193723
REGRESSION (Probably r240243): CrashTracer: WebKitTestRunnerApp at com.apple.WebKit: WebKit::WebResourceLoadStatisticsStore::sendDiagnosticMessageWithValue const + 32
https://bugs.webkit.org/show_bug.cgi?id=193723
Summary REGRESSION (Probably r240243): CrashTracer: WebKitTestRunnerApp at com.apple....
Brent Fulgham
Reported 2019-01-23 08:54:39 PST
The new code in Bug 193556 could attempt to submit telemetry after the relevant WebResourceLoadStatisticsStore was destroyed. We should guard against this possibility.
Attachments
Patch (4.11 KB, patch)
2019-01-23 08:57 PST, Brent Fulgham
no flags
Brent Fulgham
Comment 1 2019-01-23 08:55:09 PST
Brent Fulgham
Comment 2 2019-01-23 08:57:08 PST
David Kilzer (:ddkilzer)
Comment 3 2019-01-23 10:19:13 PST
Comment on attachment 359893 [details] Patch r=me
WebKit Commit Bot
Comment 4 2019-01-23 10:44:40 PST
Comment on attachment 359893 [details] Patch Clearing flags on attachment: 359893 Committed r240346: <https://trac.webkit.org/changeset/240346>
WebKit Commit Bot
Comment 5 2019-01-23 10:44:41 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.