REGRESSION (r240243): CrashTracer: WebKitTestRunnerApp at com.apple.WebKit: WebKit::WebResourceLoadStatisticsStore::sendDiagnosticMessageWithValue const + 32 https://bugs.webkit.org/show_bug.cgi?id=193723 <rdar://problem/47476802>

Reviewed by David Kilzer.

The new code added in r240243 could attempt to submit telemetry after the relevant
WebResourceLoadStatisticsStore was destroyed. We should guard against this possibility.

* NetworkProcess/Classifier/WebResourceLoadStatisticsTelemetry.cpp:
(WebKit::WebResourceLoadStatisticsTelemetry::calculateAndSubmit):


Canonical link: https://commits.webkit.org/208244@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240346 268f45cc-cd09-0410-ab3c-d52691b4dbfc